# alphaprimedev

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  __init__.py  alerts.py  app.py  brain.py  config.py  data_engine.py  docker-compose.yml  portfolio.py  pyproject.toml  pytest.ini  requirements-api.txt  requirements-full.txt  requirements.txt  research_engine.py  scheduler.py  setup.ps1  setup.py
.github/workflows/: ci.yml
alphaprime/: __init__.py  cli.py
dashboard/: __init__.py  app_v2.py  asgi.py
dashboard/components/: __init__.py  charts.py  metrics.py  tables.py
dashboard/components/pages/: 1_🏠_Home.py  2_📊_Performance.py  3_🔬_Research.py  4_⚙️_Strategy_Lab.py  5_🛡️_Risk_Monitor.py  6_📈_Backtest.py  __init__.py
docs/: 01_quick_start_install.md  01_quickstart.html  02_daily_startup_checklist.html  02_daily_startup_checklist.md  03_profit_maximization_guide.html  03_profit_maximization_guide.md  04_additional_notes.HTML  04_additional_notes.md  ALPHA_PRIME_MASTER_GUIDE.html  ALPHA_PRIME_MASTER_GUIDE.md  LOCAL_OPS.md  RELEASE.md  RUN_WINDOWS.md  SETUP_WINDOWS_3127.html
intelligence/: __init__.py  insider_tracker.py  sector_analysis.py  sentiment_aggregator.py
ops/: __init__.py  backup_manager.py  deployment_validator.py  health_check.py  watchdog.py
risk/: __init__.py  circuit_breakers.py  correlation_monitor.py  position_sizer.py  risk_metrics.py
scripts/: bootstrap_windows.ps1  build_wheelhouse.ps1  export_trades.py  generate_report.py  install_offline.ps1  reset_local.ps1  reset_portfolio.py  run_api.ps1  run_backtest.py  run_scheduler.ps1  run_ui.ps1  selfcheck.py  setup.sh  stress_test.py
strategy/: __init__.py  event_calendar.py  execution_optimizer.py  multi_timeframe.py  regime_detector.py  strategy_registry.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_circuit_breakers.py  test_config.py  test_portfolio.py  test_position_sizer.py  test_regime_detector.py
tests/unit/fixtures/: mock_market_data.csv  sample_signals.json  test_portfolio.json
tests/unit/integration/: __init__.py  test_api_clients.py  test_full_cycle.py
tests_runtime/: test_runtime_reliability.py
utils/: __init__.py  api_clients.py  cache_manager.py  data_normalization.py  helpers.py  notifier.py  performance_calculator.py
validation/: __init__.py  backtest_validator.py  data_quality.py  drift_monitor.py  walk_forward.py
