# ============================================================
# ALPHA-PRIME v2.0 - Project Configuration
# ============================================================
# Modern Python project configuration following PEP 621
# Installation:
#   pip install -e .                 # Editable install
#   pip install -e .[dev]            # With dev dependencies
#   pip install -e .[all]            # All optional dependencies
# Tool usage:
#   black .                          # Format code
#   isort .                          # Sort imports
#   pytest                           # Run tests
#   mypy .                           # Type checking
#   flake8                           # Linting
# Build package:
#   python -m build
# ============================================================


[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "alpha-prime"
version = "2.0.0"
description = "AI-powered autonomous trading system combining LLM reasoning with quantitative analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "your.email@example.com" },
]

maintainers = [
  { name = "Your Name", email = "your.email@example.com" },
]

keywords = [
  "trading",
  "algorithmic-trading",
  "ai",
  "llm",
  "quantitative-finance",
  "risk-management",
  "portfolio-optimization",
  "backtesting",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# Note: Some packages may require additional setup:
# - Playwright: Run `playwright install chromium` after installation
# - pandas-ta: Beta package, may have breaking changes


[project.urls]
Homepage = "https://github.com/yourusername/alpha-prime"
Documentation = "https://github.com/yourusername/alpha-prime/wiki"
Repository = "https://github.com/yourusername/alpha-prime"
"Bug Tracker" = "https://github.com/yourusername/alpha-prime/issues"
Changelog = "https://github.com/yourusername/alpha-prime/blob/main/CHANGELOG.md"


[project.dependencies]
# Core trading stack
streamlit = ">=1.31.0"
yfinance = ">=0.2.36"
pandas = ">=2.2.0"
"pandas-ta" = ">=0.3.14b0"
numpy = ">=1.26.0"
plotly = ">=5.18.0"
scipy = ">=1.12.0"
statsmodels = ">=0.14.1"

# HTTP & scraping
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
playwright = ">=1.41.0"

# AI & LLM
openai = ">=1.10.0"
praw = ">=7.7.1"
vaderSentiment = ">=3.3.2"

# Data validation & settings
pydantic = ">=2.5.0"
"pydantic-settings" = ">=2.1.0"

# Config & env
"python-dotenv" = ">=1.0.0"

# Scheduling & resilience
schedule = ">=1.2.0"
tenacity = ">=8.2.3"

# Risk & portfolio
pyportfolioopt = ">=1.5.5"
empyrical = ">=0.5.5"
quantstats = ">=0.0.62"

# Data quality & drift
evidently = ">=0.4.15"

# SEC & filings
edgartools = ">=2.0.0"

# Caching
diskcache = ">=5.6.3"

# ML & analytics
"scikit-learn" = ">=1.4.0"

# Ops & monitoring
"python-json-logger" = ">=2.0.7"
psutil = ">=5.9.8"
watchdog = ">=4.0.0"


[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "black>=23.12.0",
  "flake8>=7.0.0",
  "mypy>=1.8.0",
  "isort>=5.13.0",
  "pre-commit>=3.6.0",
]

notifications = [
  "twilio>=8.12.0",
  "sendgrid>=6.11.0",
]

ml = [
  "xgboost>=2.0.3",
  "lightgbm>=4.1.0",
  "catboost>=1.2.0",
]

# Optional dependency groups:
# - dev: Development and testing tools
# - notifications: SMS/Email alert services (requires API keys)
# - ml: Advanced machine learning models
# - all: Install everything via alpha-prime[all]
all = [
  "alpha-prime[dev,notifications,ml]",
]


[project.scripts]
alpha-prime = "dashboard.app_v2:main"
alpha-scheduler = "scheduler:start_scheduler"
alpha-backtest = "scripts.run_backtest:main"
alpha-report = "scripts.generate_report:main"


[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | data
  | logs
)/
'''


[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "build", "dist", "data", "logs"]


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=.",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-branch",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "api: marks tests that call external APIs",
]
filterwarnings = [
  "error",
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
]


[tool.coverage.run]
source = ["."]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
  "setup.py",
]
branch = true


[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]


[tool.coverage.html]
directory = "htmlcov"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true


[[tool.mypy.overrides]]
module = [
  "yfinance.*",
  "pandas_ta.*",
  "praw.*",
  "vaderSentiment.*",
  "quantstats.*",
]
ignore_missing_imports = true


[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "venv",
  "data",
  "logs",
]
max-complexity = 10
